[package]
name = "ein"
version = "0.1.0"
authors = ["Joe Clay <27cupsofcoffee@gmail.com>"]
edition = "2018"

[dependencies]
ein_syntax = { path = "ein_syntax" }
ein_treewalk = { path = "ein_treewalk" }

structopt = "0.2.15"
rustyline = "1.0.0"

[dev-dependencies]
criterion = "0.2"

[workspace]
members = ["ein_syntax", "ein_treewalk"]

[[bench]]
name = "benchmarks"
harness = false
